--- a/HTML/hotels.html
+++ b/HTML/hotels.html
@@ -11,6 +11,22 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   
 </head>
+<style>
+  .row.content {
+    height: 400px
+  }
+
+  .sidenav {
+    background-color: white;
+    height: 100%;
+  }
+
+  @media screen and (max-width: 100px) {
+    .row.content {
+      height: auto;
+    }
+  }
+</style>
 <body>
   <div class="container">
 <h2>ePasyar Hotels</h2>
