--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -14,7 +14,22 @@
 
 
 </head>
+<style>
+  .row.content {
+    height: 400px
+  }
 
+  .sidenav {
+    background-color: white;
+    height: 100%;
+  }
+
+  @media screen and (max-width: 100px) {
+    .row.content {
+      height: auto;
+    }
+  }
+</style>
 <body>
   <div class="container">
     <h2>ePasyar Tourist Spots</h2>
