--- a/HTML/events.html
+++ b/HTML/events.html
@@ -12,6 +12,22 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-storage.js"></script>
 </head>
+<style>
+  .row.content {
+    height: 400px
+  }
+
+  .sidenav {
+    background-color: white;
+    height: 100%;
+  }
+
+  @media screen and (max-width: 100px) {
+    .row.content {
+      height: auto;
+    }
+  }
+</style>
 
 <body>
   <div class="container">
