--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,22 @@
 
     
 </head>
+<style>
+    .row.content {
+      height: 400px
+    }
+
+    .sidenav {
+      background-color: white;
+      height: 100%;
+    }
+
+    @media screen and (max-width: 100px) {
+      .row.content {
+        height: auto;
+      }
+    }
+  </style>
 
 <body>
 
