--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -11,6 +11,22 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+<style>
+  .row.content {
+    height: 400px
+  }
+
+  .sidenav {
+    background-color: white;
+    height: 100%;
+  }
+
+  @media screen and (max-width: 100px) {
+    .row.content {
+      height: auto;
+    }
+  }
+</style>
 <body>
     <div class="container">
         <h2>ePasyar Profile</h2>
