--- a/HTML/register.html
+++ b/HTML/register.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-...">
     <title>Register Account</title>
 </head>
+<style>
+    .row.content {
+      height: 400px
+    }
+
+    .sidenav {
+      background-color: white;
+      height: 100%;
+    }
+
+    @media screen and (max-width: 100px) {
+      .row.content {
+        height: auto;
+      }
+    }
+  </style>
 <body>
     
     <div class="reg-container">
