--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -40,7 +40,7 @@
           ePasyar</h2>
         <ul class="nav nav-pills nav-stacked">
 
-          <li><a href="#section1" onclick="showAdminContent()"><i class="fas fa-user"></i> Admin</a></li>
+          <li><a href="#section1"><i class="fas fa-user"></i> Admin</a></li>
           <li class="active"><a href="#section1" id="dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
           <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
           <li><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
@@ -64,7 +64,7 @@
       </div>
 
       <div class="col-sm-9">
-        <div class="row">
+        <div class="row" id="row-content">
           <div class="column">
             <div class="card">
               <a href="#sec1">
@@ -75,7 +75,7 @@
           <div class="column">
             <div class="card">
               <a href="#sec1">
-                <h4 class="fas fa-user-shield" id="admin"></i>Admins</h4>
+                <h4 class="fas fa-user-shield" id="admin"></i> Admins</h4>
                 <p id="adminCount">0</p>
             </div>
           </div>
@@ -117,7 +117,7 @@
             <div class="column">
               <div class="card">
                 <a href="#sec1">
-                  <h4 class="fas fa-shopping-bag" id="souvenirs"></i>Souvenir Shops</h4>
+                  <h4 class="fas fa-shopping-bag" id="souvenirs"></i> Souvenir Shops</h4>
                   <p id="souvenirCount">0</p>
               </div>
             </div>
@@ -130,20 +130,12 @@
             </div>
 
           </div>
-          <div class="row">
+         
             <div class="col-sm-4">
               <div class="well">
                 <a href="#sec1">
-                  <p class="fas fa-map-marked-alt" id="maps"></i> Maps</p>
-                  <canvas id="MapsChart" width="400" height="200"></canvas>
-
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="well">
-                <a href="#sec1">
-                  <p class="fas fa-hotel" id="visited"></i> Most Visited</p>
-                  <canvas id="mostVisitedChart" width="500" height="500"></canvas>
+                  <p class="fas fa-users" id="visited"></i> NUMBER OF TOURISTS</p>
+                  <canvas id="mostVisitedChart" style="width:200%;max-width:7000px;height:400px"></canvas>
 
               </div>
             </div>
