--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -10,8 +10,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-</head>
 <style>
   .row.content {
     height: 400px
@@ -28,14 +26,15 @@
     }
   }
 </style>
-<body>
-  <div class="container">
-    <h2>ePasyar Hotels</h2>
+</head>
 
-    <div class="container-fluid">
-      <div class="row content">
-        <div class="col-sm-3 sidenav hidden-xs">
-          <ul class="nav nav-pills nav-stacked">
+<body>
+  <div class="container-fluid">
+    <div class="row content">
+      <div class="col-sm-3 sidenav hidden-xs">
+        <h2 id="dash-logo"><img src="/image/ePasyar.png" alt="index" width="60" height="50" class="center-image">
+          ePasyar</h2>
+        <ul class="nav nav-pills nav-stacked">
             <li><a href="#section1"><i class="fas fa-user"></i> Admin</a></li>
             <li><a href="#section14" id="dash"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
