--- a/HTML/souvenir.html
+++ b/HTML/souvenir.html
@@ -12,8 +12,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-storage.js"></script>
 
-
-</head>
 <style>
   .row.content {
     height: 400px
@@ -30,14 +28,15 @@
     }
   }
 </style>
-<body>
-  <div class="container">
-    <h2>ePasyar Souvenir Shops</h2>
+</head>
 
-    <div class="container-fluid">
-      <div class="row content">
-        <div class="col-sm-3 sidenav hidden-xs">
-          <ul class="nav nav-pills nav-stacked">
+<body>
+  <div class="container-fluid">
+    <div class="row content">
+      <div class="col-sm-3 sidenav hidden-xs">
+        <h2 id="dash-logo"><img src="/image/ePasyar.png" alt="index" width="60" height="50" class="center-image">
+          ePasyar</h2>
+        <ul class="nav nav-pills nav-stacked">
             <li><a href="#section1"><i class="fas fa-user"></i> Admin</a></li>
             <li><a href="#section1" id="dash"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
