--- a/HTML/events.html
+++ b/HTML/events.html
@@ -11,7 +11,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-storage.js"></script>
-</head>
 <style>
   .row.content {
     height: 400px
@@ -29,29 +28,31 @@
   }
 </style>
 
+</head>
+
+
 <body>
-  <div class="container">
-    <h2>ePasyar Events</h2>
+  <div class="container-fluid">
+    <div class="row content">
+      <div class="col-sm-3 sidenav hidden-xs">
+        <h2 id="dash-logo"><img src="/image/ePasyar.png" alt="index" width="60" height="50" class="center-image">
+          ePasyar</h2>
+        <ul class="nav nav-pills nav-stacked">
 
-    <div class="container-fluid">
-      <div class="row content">
-        <div class="col-sm-3 sidenav hidden-xs">
-          <ul class="nav nav-pills nav-stacked">
-            <li><a href="#section1"><i class="fas fa-user"></i> Admin</a></li>
-            <li><a href="#section1" id="dash"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-            <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
-            <li class="active"><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
-            <li ><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
-            <li ><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
-            <li ><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
-            <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
-            <li><a href="#section4" id="reviews"><i class="fas fa-star"></i> Reviews</a></li>
-            <li><a href="#section9" id="about"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
+          <li><a href="#section1"><i class="fas fa-user"></i> Admin</a></li>
+          <li ><a href="#section1" id="dash"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+          <li ><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
+          <li class="active"><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
+          <li><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
+          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
+          <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
+          <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
+          <li><a href="#section4" id="reviews"><i class="fas fa-star"></i> Reviews</a></li>
+          <li><a href="#section9" id="about"><i class="fas fa-info-circle"></i> About</a></li>
+          <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
 
-          </ul><br>
-        </div>
-
+        </ul><br>
+      </div>
         <main class="main-container">
 
           <div class="main2">
