--- a/HTML/events.html
+++ b/HTML/events.html
@@ -71,7 +71,7 @@
                   <th>Event Name</th>
                   <th>Event Date</th>
                   <th>Event Description</th>
-                  <th>Event Photos</th>
+                
                 </tr>
                 <tbody id="tbody1"></tbody>
               </table>
@@ -96,8 +96,8 @@
           <label for="reg-event">Event Description</label>
           <textarea id="description" name="description"></textarea>
 
-          <label for="photos">Event Photos</label>
-          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg">
+          <!-- <label for="photos">Event Photos</label>
+          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg"> -->
 
           <input type="submit" id="btnRegister" value="Add Event" />
         </form>
@@ -120,8 +120,8 @@
           <label for="description1">Event Description</label>
           <textarea id="description1" name="description1"></textarea>
 
-          <label for="photos1">Event Photos</label>
-          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg">
+          <!-- <label for="photos1">Event Photos</label>
+          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg"> -->
 
           <input type="submit" id="btnEdit" value="Save" />
         </form>
