--- a/HTML/hotels.html
+++ b/HTML/hotels.html
@@ -68,6 +68,7 @@
                   <th>Name</th>
                   <th>Address</th>
                   <th>Description</th>
+                  <!-- <th>Photos</th> -->
                   <th>Photos</th>
              
               </tr>
