--- a/HTML/pArchives.html
+++ b/HTML/pArchives.html
@@ -77,6 +77,7 @@
                         <th>Rooms</th>
                         <th>Room Capacity</th>
                         <th>Room Rates</th>
+                        <!-- <th>Photos</th> -->
                         <th>Deleted On</th>
                         
     
