--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -80,6 +80,7 @@
                     <th>Address</th>
                     <th>Rooms</th>
                     <th>Room Capacity</th>
+                    <!-- <th>Photos</th> -->
                     <th>Room Rates</th>
                   
                     
