--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -45,7 +45,7 @@
             <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
             <li ><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
             <li class="active"><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
-            <li><a href="#section4" id="reviews"><i class="fas fa-star"></i> Reviews</a></li>
+            <li><a href="#section4" id="reviewS"><i class="fas fa-star"></i> Reviews</a></li>
       
             <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
 
@@ -78,6 +78,7 @@
                     <th>Name</th>  
                     <th>Owner</th> 
                     <th>Contact Number</th> 
+                    <!-- <th>Photos</th> -->
                     <th>Location</th>                 
 
                   </tr>
