--- a/HTML/tArchives.html
+++ b/HTML/tArchives.html
@@ -71,6 +71,7 @@
                         <th>Category</th>
                         <th>Name</th>           
                         <th>Description</th>
+                        <!-- <th>Photos</th>   -->
                         <th>Deleted On</th>
     
                     </tr>
