--- a/HTML/archives.html
+++ b/HTML/archives.html
@@ -57,6 +57,7 @@
                         <th>Event Name</th>
                         <th>Event Date</th>
                         <th>Event Description</th>
+                        <!-- <th>Event Photos</th> -->
                         <th>Deleted On</th>
     
                     </tr>
