--- a/HTML/rArchives.html
+++ b/HTML/rArchives.html
@@ -71,7 +71,8 @@
                         <th>Name</th>  
                         <th>Owner</th> 
                         <th>Contact Number</th> 
-                        <th>Location</th>                 
+                        <th>Location</th>     
+                        <!-- <th>Photos</th>             -->
                         <th>Deleted On</th>
     
                     </tr>
