--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -59,7 +59,7 @@
             <div class="btn_useracc">
               <button class="add_acc" id="add_acc" >Add</button>
               <button class="edit_acc" id="edit_acc" >Edit</button>
-              <button id="delete_acc" >Delete</button>
+              <button id="delete_acc" >Archive</button>
               <div>
                 <button id="archived_acc">See Archives</button>
               </div>
@@ -75,10 +75,10 @@
 
                     <div class="outer-wrapper">
                       <div class="table-wrapper">
-                    <th>Category</th>
+                    
                     <th>Name</th>                  
                     <th>Description</th>
-                    <!-- <th>Photos</th>   -->
+                    <th>Photos</th>  
 
 
                   </tr>
@@ -186,7 +186,7 @@
     
     <!-- confirmation modal for delete account -->
       <div class="cnfrm_modal_delete" id="delete_acc_modal">
-        <h1>Confirm delete this Tourist Spot?</h1>
+        <h1>Are you sure you want to archive this Tourist Spot?</h1>
             <div class="btn1">
                 <button id="cnl2">Cancel</button>
                 <button id="cnfrm2">Confirm</button>
