--- a/HTML/archives.html
+++ b/HTML/archives.html
@@ -52,16 +52,15 @@
                 <div class="table-wrapper">
                 <table id="table" class="table" style="width:100%">
                     <tr>
-                        
-                        <th>Deleted By</th>
-                        <th>Event Name</th>
-                        <th>Event Date</th>
-                        <th>Event Description</th>
-                        <!-- <th>Event Photos</th> -->
-                        <th>Deleted On</th>
+                       <th>Archived By</th> 
+                       <th>Event Name</th>
+                       <th>Event Date</th>
+                       <th>Event Description</th>
+                       <th>Event Photos</th>
+                      <th>Archived Date</th>
     
                     </tr>
-                <tbody id="tbody1"></tbody>                                                       
+                <tbody id="archived-tbody"></tbody>                                                       
                 </table>
             </div>
             </div>
