--- a/HTML/events.html
+++ b/HTML/events.html
@@ -119,8 +119,8 @@
           <label for="reg-event">Event Description</label>
           <textarea id="description" name="description"></textarea>
 
-          <!-- <label for="photos">Event Photos</label>
-          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg"> -->
+          <label for="photos">Event Photos</label>
+          <input type="file" id="photos" name="photos" accept="image/png, image/jpeg">
 
           <input type="submit" id="btnRegister" value="Add Event" />
         </form>
@@ -144,8 +144,8 @@
           <label for="description1">Event Description</label>
           <textarea id="description1" name="description1"></textarea>
 
-          <!-- <label for="photos1">Event Photos</label>
-          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg"> -->
+          <label for="photos1">Event Photos</label>
+          <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg">
 
           <input type="submit" id="btnEdit" value="Save" />
         </form>
