--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -118,9 +118,9 @@
 
             <label for="reg-event">Description</label>
             <textarea id="description" name="description"></textarea>
-<!-- 
-            <label for="confirm"> Photos</label>
-            <input type="file" id="photos" name="photos"> -->
+
+          <label for="confirm"> Photos</label>
+            <input type="file" id="photos" name="photos" accept="image/png, image/jpeg"> 
             
 
 
@@ -137,7 +137,7 @@
         <form action="/" class="modal-form-edit" id="form-edit" autocomplete="off"></form>
 
         <div class="container-modal-edit" id="edit-modal">
-          <span class="close-modal-edit">&times;</span>
+          <span class="close-modal-ediT">&times;</span>
           <h1 id="edit-txt">Edit an Tourist Spots</h1>
           <label class="category1">Category </label>
             <div class="category-info">
@@ -156,8 +156,8 @@
             <label for="reg-event">Description</label>
             <textarea id="description1" name="description"></textarea>
 
-            <!-- <label for="confirm"> Photos</label>
-            <input type="file" id="photos1" name="photos"> -->
+            <label for="confirm"> Photos</label>
+            <input type="file" id="photos1" name="photos" accept="image/png, image/jpeg"> 
 
             <input type="submit" id="btnEdit" value="Save" />
           </form>
