--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -68,14 +68,14 @@
           <div class="column">
             <div class="card">
               <a href="#sec1">
-                <h4 class="fas fa-users" id="users"></i> Users</h4>
+                <h4 class="fas fa-users" id="users"></i> Tourist</h4>
                 <p id="userCount">0</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
               <a href="#sec1">
-                <h4 class="fas fa-user-shield" id="admin"></i> Admins</h4>
+                <h4 class="fas fa-user-shield" id="admin"></i> Admin</h4>
                 <p id="adminCount">0</p>
             </div>
           </div>
