--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -124,7 +124,8 @@
             <label for="name">Location</label>
             <input type="text" id="location" name="Location">
             
-
+            <label for="name">Photos</label>
+            <input type="file" id="photos" name="photos">
 
             <input type="submit" id="btnRegister" value="Add Restaurant" />
           </form>
@@ -163,6 +164,9 @@
 
             <label for="name">Location</label>
             <input type="text" id="location1" name="location">
+
+            <label for="name">Photos</label>
+            <input type="file" id="photos1" name="photos">
 
             <input type="submit" id="btnEdit" value="Save" />
           </form>
