--- a/HTML/souvenir.html
+++ b/HTML/souvenir.html
@@ -125,6 +125,8 @@
             <label for="name">Location</label>
             <input type="text" id="location" name="Location">
             
+            <label for="name">Photos</label>
+            <input type="file" id="photos" name="photos">
 
 
             <input type="submit" id="btnRegister" value="Add Souvenir Shop" />
@@ -164,6 +166,9 @@
 
             <label for="name">Location</label>
             <input type="text" id="location1" name="location">
+
+            <label for="name">Photos</label>
+            <input type="file" id="photos1" name="photos">
 
             <input type="submit" id="btnEdit" value="Save" />
           </form>
