--- a/HTML/hotels.html
+++ b/HTML/hotels.html
@@ -40,7 +40,9 @@
         <li><a href="#section12" id= "events" ><i class="fas fa-calendar-alt"></i> Events</a></li>
         <li><a href="#section3" id= "notifs" ><i class="fas fa-bell"></i> Notifications</a></li>
         <li><a href="#section4" id= "reviews" ><i class="fas fa-star"></i> Reviews</a></li>
-       
+        <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
+        <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
+        <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
         <li><a href="#section11" id= "logout" ><i class="fas fa-sign-out-alt"></i> Log out</a></li>
 
       </ul><br>
