--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,9 +54,9 @@
             <button type="button" >Cancel</button>
         </form>
     </div>
-    <div id="register">
+    <!-- <div id="register">
         <p>Not registered? <a id="register-button" href="register.html">Create an Account</a></p>
-    </div>
+    </div> -->
 
 <script type="module" src="/Javascript/index.js"></script>
 </body>
