--- a/HTML/pArchives.html
+++ b/HTML/pArchives.html
@@ -45,7 +45,9 @@
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
           <li><a href="#section4" id="reviews"><i class="fas fa-star"></i> Reviews</a></li>
-        
+          <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
+          <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
+          <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
           <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
 
         </ul><br>
