--- a/HTML/rev_hotel.html
+++ b/HTML/rev_hotel.html
@@ -51,10 +51,10 @@
                   <i class="fas fa-star"></i> Reviews <i class="fas fa-caret-down"></i>
               </a>
               <ul class="dropdown">
-                  <li><a href="#section5"><i class="fas fa-utensils"></i> Restaurants</a></li>
-                  <li><a href="#section6"><i class="fas fa-hotel"></i> Hotels</a></li>
-                  <li><a href="#section7"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
-                  <li><a href="#section8"><i class="fas fa-globe"></i> Tourist Spots</a></li>
+                <li ><a href="#section13" id="revtourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
+                <li class="active"><a href="#section3" id="revpromotion"><i class="fas fa-hotel"></i> Hotels</a></li>
+                <li ><a href="#section13" id="revsouvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
+                <li><a href="#section4" id="revrestaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
               </ul>
           </li>
 
