--- a/HTML/archives.html
+++ b/HTML/archives.html
@@ -29,7 +29,17 @@
           <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
-          <li><a href="#section4" id="reviews"><i class="fas fa-star"></i> Reviews</a></li>
+          <li>
+            <a href="#section4" id="reviews">
+             <i class="fas fa-star"></i> Reviews <i class="fas fa-caret-down"></i>
+         </a>
+         <ul class="dropdown">
+           <li ><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
+           <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
+           <li ><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
+           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
+         </ul>
+         </li>
           <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
           <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
           <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
