--- a/HTML/industries.html
+++ b/HTML/industries.html
@@ -5,7 +5,7 @@
   <title>Dashboard Panel</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="/CSS/events.css">
+  <link rel="stylesheet" type="text/css" href="/CSS/industries.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -43,7 +43,7 @@
 
           <li><a href="#section1" id="dash"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
           <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
-          <li class="active"><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
+          <li><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
           <li><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
           <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
@@ -59,9 +59,9 @@
            <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
          </ul>
          </li>
-          <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
-          <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
-          <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
+          <li ><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
+          <li class="active"><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
+          <li ><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
           <li><a href="#section11" id="logout"><i class="fas fa-sign-out-alt"></i> Log out</a></li>
         </ul><br>
       </div>
@@ -75,8 +75,6 @@
               <button id="archived_acc">See Archives</button>
                 </div>   
 
-                <input type="date" id="cal-date" >
-
     
             <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
           </div>
@@ -84,10 +82,9 @@
             <div class="table-wrapper">
               <table id="table" class="table" style="width:100%">
                 <tr>
-                  <th>Event Name</th>
-                  <th>Event Date</th>
-                  <th>Event Description</th>
-                  <th>Event Photos</th>
+                  <th>Name</th>
+                  <th>Description</th>
+                  <th>Photos</th>
 
                 </tr>
                 <tbody id="tbody1"></tbody>
@@ -103,21 +100,18 @@
     <div class="reg-container" id="user-create">
       <div class="container-modal">
         <span class="close-modal">&times;</span>
-        <h1 id="create-txt">Create an Event</h1>
+        <h1 id="create-txt">Create an Local Industries</h1>
         <form id="create-form">
-          <label for="name">Event Name</label>
+          <label for="name"> Name</label>
           <input type="text" id="name" name="name">
 
-          <label for="reg-date">Event Date</label>
-          <input type="date" id="date" name="date">
-
-          <label for="reg-event">Event Description</label>
+          <label for="reg-event"> Description</label>
           <textarea id="description" name="description"></textarea>
 
-          <label for="photos">Event Photos</label>
+          <label for="photos"> Photos</label>
           <input type="file" id="photos" name="photos" accept="image/png, image/jpeg">
 
-          <input type="submit" id="btnRegister" value="Add Event" />
+          <input type="submit" id="btnRegister" value="Add Local Dishes" />
         </form>
         
       </div>
@@ -128,18 +122,16 @@
       <form action="/" class="modal-form-edit" id="form-edit" autocomplete="off"></form>
       <div class="container-modal-edit" id="edit-modal">
         <span class="close-modal-edit">&times;</span>
-        <h1 id="edit-txt">Edit an Event</h1>
+        <h1 id="edit-txt">Edit an Local Industries</h1>
         <form id="edit-form">
-          <label for="name1">Event Name</label>
+          <label for="name1"> Name</label>
           <input type="text" id="name1" name="name1">
 
-          <label for="date1">Event Date</label>
-          <input type="date" id="date1" name="date1">
 
-          <label for="description1">Event Description</label>
+          <label for="description1"> Description</label>
           <textarea id="description1" name="description1"></textarea>
 
-          <label for="photos1">Event Photos</label>
+          <label for="photos1"> Photos</label>
           <input type="file" id="photos1" name="photos1" accept="image/png, image/jpeg">
 
           <input type="submit" id="btnEdit" value="Save" />
@@ -149,7 +141,7 @@
 
     <!-- confirmation modal for add account -->
     <div class="cnfrm_modal_add" id="cnfrm_add">
-      <h1>Add Event Information?</h1>
+      <h1>Add Local Industries Information?</h1>
       <div class="btn1">
         <button id="cnl3" class="cnl">Cancel</button>
         <button id="cnfrm3">Confirm</button>
@@ -158,7 +150,7 @@
 
     <!-- confirmation modal for edit account -->
     <div class="cnfrm_modal" id="cnfrm_edit">
-      <h1>Update Event Information?</h1>
+      <h1>Update Local Industries Information?</h1>
       <div class="btn1">
         <button id="cnl" class="cnl">Cancel</button>
         <button id="cnfrm">Confirm</button>
@@ -167,7 +159,7 @@
 
     <!-- confirmation modal for delete account -->
     <div class="cnfrm_modal_delete" id="delete_acc_modal">
-      <h1>Are you sure you want to archive this Event?</h1>
+      <h1>Are you sure you want to archive this Local Industries?</h1>
       <div class="btn1">
         <button id="cnl2">Cancel</button>
         <button id="cnfrm2">Confirm</button>
@@ -204,7 +196,7 @@
   </script>
 
 
-  <script type="module" src="/Javascript/events.js"></script>
+  <script type="module" src="/Javascript/industries.js"></script>
 </body>
 
 </html>
