--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -143,10 +143,10 @@
             <input type="text" id="name" name="Name">
 
             <label for="reg-event">Owner</label>
-            <input id="owner" name="Owner"></input>
+            <input type="text" id="owner" name="Owner"></input>
 
             <label for="reg-event">Type</label>
-            <input id="type" name="Type"></input>
+            <input type="text" id="type" name="Type"></input>
 
             <label for="confirm">Contact Number</label>
             <input type="tel" id="number" name="Number">
@@ -187,10 +187,10 @@
             <input type="text" id="name1" name="name">
 
             <label for="reg-event">Owner</label>
-            <input id="owner1" name="owner"></input>
+            <input type="text" id="owner1" name="owner"></input>
 
             <label for="reg-event">Type</label>
-            <input id="type1" name="type"></input>
+            <input type="text" id="type1" name="type"></input>
 
             <label for="confirm">Contact Number</label>
             <input type="tel" id="number1" name="number">
