--- a/HTML/events.html
+++ b/HTML/events.html
@@ -49,30 +49,34 @@
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
           <li class="sidebar-list-item1">
-            <button class="dropdown-btn"> <i class="fas fa-star"></i> Reviews <i class="fa fa-caret-down"></i></button>
+            <button class="dropdown-btn">
+            <i class="fas fa-star"></i> Reviews
+              <i class="fa fa-caret-down" id="icon"></i>
+            </button>
             <div class="dropdown-container">
               <a href="rev_tourist.html">
                 <div class="con-lic">
-                  <i class="fas fa-map-marker-alt"> </i> Tourist Spots
+                  <i class="fas fa-map-marker-alt icon-spacing" id="tour"></i> Tourist Spots
                 </div>
               </a>
               <a href="rev_hotel.html">
                 <div class="con-lic">
-                  <i class="fas fa-hotel"> </i> Hotels
+                  <i class="fas fa-hotel icon-spacing"></i> Hotels
                 </div>
               </a>
               <a href="rev_souvenir.html">
                 <div class="con-lic">
-                  <i class="fas fa-shopping-bag" > </i> Souvenir Shops
+                  <i class="fas fa-shopping-bag icon-spacing"></i> Souvenir Shops
                 </div>
               </a>
               <a href="rev_restaurant.html">
                 <div class="con-lic">
-                  <i class="fas fa-utensils"></i> Restaurant
+                  <i class="fas fa-utensils icon-spacing"></i> Restaurant
                 </div>
               </a>
             </div>
           </li>
+          
           <li><a href="#section41" id="localdishes"><i class="fas fa-utensils"></i> Local Dishes</a></li>
           <li><a href="#section44" id="localindustries"><i class="fas fa-industry"></i> Local Industries</a></li>
           <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
