--- a/HTML/souvenir.html
+++ b/HTML/souvenir.html
@@ -143,7 +143,7 @@
             <input type="text" id="name" name="Name">
 
             <label for="reg-event">Owner</label>
-            <input id="owner" name="Owner"></input>
+            <input type="text" id="owner" name="Owner"></input>
 
             <label for="confirm">Contact Number</label>
             <input type="tel" id="number" name="Number">
@@ -185,7 +185,7 @@
             <input type="text" id="name1" name="name">
 
             <label for="reg-event">Owner</label>
-            <input id="owner1" name="owner"></input>
+            <input type="text" id="owner1" name="owner"></input>
 
             <label for="confirm">Contact Number</label>
             <input type="tel" id="number1" name="number">
