--- a/HTML/tArchives.html
+++ b/HTML/tArchives.html
@@ -69,6 +69,7 @@
             <div class="btn_useracc">
               <button id="bckbtn">Back</button>
               <button class="enable_acc" id="enabledTourist" >Retrieve Event</button>
+              <button class="enable_acc" id="permanentlyDelete" >Permanently Delete</button>
                 <div>
                   <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
                 </div>  
@@ -104,6 +105,14 @@
           <button id="cnl">Cancel</button>
           <button id="cnfrm">Confirm</button>
       </div>
+</div>
+
+<div class="cnfrm_modal" id="cnfrm_modal_delete">
+  <h1>Permanently Delete Event?</h1>
+  <div class="btn">
+    <button id="cnl_delete">Cancel</button>
+    <button id="cnfrm_delete">Confirm</button>
+  </div>
 </div>
 
     
