--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 <style>
   .row.content {
     height: 400px
@@ -110,6 +112,7 @@
                     <th>Room Capacity</th>                 
                     <th>Room Rates</th>
                    <th>Photos</th>
+                   <th>QR Code</th>   
                     
                    
 
