--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -11,6 +11,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-storage.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 <style>
   .row.content {
     height: 400px
@@ -107,6 +109,7 @@
                     <th>Contact Number</th>                    
                     <th>Location</th>                 
                     <th>Photos</th>
+                    <th>QR Code</th> 
                   </tr>
                   <tbody id="tbody1"></tbody>
                 </table>
