--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -143,7 +143,7 @@
         </div>
 
         <!-- Modal for confirming account archive -->
-        <div id="delete_acc_modal" class="cnfrm_modal_delete">
+        <div class="cnfrm_modal_delete" id="delete_acc_modal">
             <h2>Confirm Archive?</h2>
             <p>Are you sure you want to archive this account?</p>
             <button id="cancel_delete">Cancel</button>
