--- a/HTML/dash.html
+++ b/HTML/dash.html
@@ -86,7 +86,7 @@
 
 
       <div>
-        <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
+      
         <p class="font-weight-bold" id="dash_label">DASHBOARD</p>
 
       </div>
@@ -170,7 +170,7 @@
           </div>
 
 
-          <div class="well">
+          <!-- <div class="well">
             <h4>Tourists List</h4>
             <table class="table">
               <thead>
@@ -180,10 +180,10 @@
                   <th>Last Name</th>
                   <th>Email</th>
                   <th>Country</th>
-                  <th>Password</th>
+         
 
                 </tr>
-              </thead>
+              </thead> -->
               <tbody id="touristsTableBody">
                 <!-- confirmation modal for add account -->
                 <div class="cnfrm_modal_add" id="cnfrm_add">
