--- a/HTML/events.html
+++ b/HTML/events.html
@@ -86,12 +86,13 @@
       <main class="main-container">
         <div class="main2">
           <div class="btn_useracc">
-            <button class="add_acc" id="add_acc" >Add</button>
-            <button class="edit_acc" id="edit_acc">Edit</button>
-            <button id="delete_acc">Archive</button>
+            <button class="add_acc" id="add_acc"><i class="fas fa-plus"></i> </button>
+            <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> </button>
+            <button id="delete_acc"><i class="fas fa-archive"></i> </button>
             <div>
-              <button id="archived_acc">See Archives</button>
-                </div>   
+              <button id="archived_acc"><i class="fas fa-box-open"></i> </button>
+            </div>
+            
                 
                 <input type="date" id="cal-date">
 
@@ -106,7 +107,7 @@
                   <th>Event Name</th>
                   <th>Event Date</th>
                   <th>Event Description</th>
-                  <th>Event Photos</th>
+                  <th>Event Poster</th>
 
                 </tr>
                 <tbody id="tbody1"></tbody>
