--- a/HTML/rev_tourist.html
+++ b/HTML/rev_tourist.html
@@ -100,11 +100,10 @@
                     <div class="outer-wrapper">
                       <div class="table-wrapper">
                   
-                        <th>Name</th>    
-                    <th>Email</th>                  
-                    <th>Comments</th>
-                    <th>Ratings</th>
-                    <th>Date</th>
+                        <th>Name</th>
+                        <th>Average Rating</th>
+                        <th>Total Reviews</th>
+                        <th>Total Visits</th>
 
                   </tr>
                   <tbody id="tbody1"></tbody>
