--- a/HTML/rev_tourist_details.html
+++ b/HTML/rev_tourist_details.html
@@ -100,11 +100,11 @@
                     <div class="outer-wrapper">
                       <div class="table-wrapper">
                   
-                        <th>Name</th>
-                        <th>Average Rating</th>
-                        <th>Total Reviews</th>
-                        <th>Total Visits</th>
-
+                        <th>Name</th>    
+                    <th>Email</th>                  
+                    <th>Comments</th>
+                    <th>Ratings</th>
+                    <th>Date</th>
 
                   </tr>
                   <tbody id="tbody1"></tbody>
@@ -151,7 +151,7 @@
       
 
 
-      <script type="module" src="/Javascript/rev_souvenir.js"></script>
+      <script type="module" src="/Javascript/rev_toueist_details.js"></script>
 </body>
 
 </html>
