--- a/HTML/archives.html
+++ b/HTML/archives.html
@@ -69,12 +69,10 @@
 
           <div class="main2">
             <div class="btn_useracc">
-              <button id="bck">Back</button>
-              <button class="enable_acc" id="enabled" >Retrieve Event</button>
-              <button class="enable_acc" id="permanentlyDelete" >Permanently Delete</button>
-                <div>
-                  <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
-                </div>  
+              <button id="bck"><i class="fas fa-arrow-left"></i> </button>
+              <button class="enable_acc" id="enabled"><i class="fas fa-undo"></i> </button>
+              <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i></button>
+              
             </div>
 
                 <div class="outer-wrapper">
@@ -85,7 +83,7 @@
                        <th>Event Name</th>
                        <th>Event Date</th>
                        <th>Event Description</th>
-                       <th>Event Photos</th>
+                       <th>Event Poster</th>
                       <th>Archived Date</th>
     
                     </tr>
