--- a/HTML/otop.html
+++ b/HTML/otop.html
@@ -82,15 +82,15 @@
       <main class="main-container">
         <div class="main2">
           <div class="btn_useracc">
-            <button class="add_acc" id="add_acc" >Add</button>
-            <button class="edit_acc" id="edit_acc">Edit</button>
-            <button id="delete_acc">Archive</button>
+            <button class="add_acc" id="add_acc"><i class="fas fa-plus"></i> </button>
+            <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> </button>
+            <button id="delete_acc"><i class="fas fa-archive"></i> </button>
             <div>
-              <button id="archived_acc">See Archives</button>
+              <button id="archived_acc"><i class="fas fa-box-open"></i> </button>
                 </div>   
 
     
-            <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
+         
           </div>
           <div class="outer-wrapper">
             <div class="table-wrapper">
