--- a/HTML/tArchives.html
+++ b/HTML/tArchives.html
@@ -67,12 +67,10 @@
 
           <div class="main2">
             <div class="btn_useracc">
-              <button id="bckbtn">Back</button>
-              <button class="enable_acc" id="enabledTourist" >Retrieve Event</button>
-              <button class="enable_acc" id="permanentlyDelete" >Permanently Delete</button>
-                <div>
-                  <input type="text" id="srchText" placeholder="Search" onkeyup="searchAppID()">
-                </div>  
+              <button id="bckbtn"><i class="fas fa-arrow-left"></i> </button>
+              <button class="enable_acc" id="enabledTourist"><i class="fas fa-undo"></i> </button>
+              <button class="enable_acc" id="permanentlyDelete"><i class="fas fa-trash-alt"></i></button>
+          
             </div>
 
                 <div class="outer-wrapper">
