--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -91,11 +91,11 @@
 
           <div class="main2">
             <div class="btn_useracc">
-              <button class="add_acc" id="add_acc" >Add</button>
-              <button class="edit_acc" id="edit_acc" >Edit</button>
-              <button id="delete_acc" >Archive</button>
-              <div>
-                <button id="archived_acc">See Archives</button>
+              <button class="add_acc" id="add_acc"><i class="fas fa-plus"></i> </button>
+            <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> </button>
+            <button id="delete_acc"><i class="fas fa-archive"></i> </button>
+            <div>
+              <button id="archived_acc"><i class="fas fa-box-open"></i> </button>
               </div>
               
 
