--- a/HTML/dArchives.html
+++ b/HTML/dArchives.html
@@ -84,7 +84,7 @@
                        <th>Archived By</th> 
                        <th>Name</th>
                        <th>Description</th>
-                       <th>Photos</th>
+                       <th>Poster</th>
                       <th>Archived Date</th>
     
                     </tr>
