--- a/HTML/dishes.html
+++ b/HTML/dishes.html
@@ -98,7 +98,7 @@
                 <tr>
                   <th>Name</th>
                   <th>Description</th>
-                  <th>Photos</th>
+                  <th>Poster</th>
 
                 </tr>
                 <tbody id="tbody1"></tbody>
