--- a/HTML/otop.html
+++ b/HTML/otop.html
@@ -99,7 +99,7 @@
                   <th>Name</th>
                   <th>Description</th>
                   <th>Place</th>
-                  <th>Photos</th>
+                  <th>Poster</th>
                 </tr>
                 <tbody id="tbody1"></tbody>
                 
