--- a/HTML/pArchives.html
+++ b/HTML/pArchives.html
@@ -104,7 +104,7 @@
                         <th>Rooms</th>
                         <th>Room Capacity</th>
                         <th>Room Rates</th>
-                        <th>Photos</th>
+                        <th>Poster</th>
                         <th>Archived Date</th>
                         
     
