--- a/HTML/promotion.html
+++ b/HTML/promotion.html
@@ -112,7 +112,7 @@
                     <th>Rooms</th>
                     <th>Room Capacity</th>                 
                     <th>Room Rates</th>
-                   <th>Photos</th>
+                   <th>Poster</th>
                    <th>QR Code</th>   
                     
                    
