--- a/HTML/rArchives.html
+++ b/HTML/rArchives.html
@@ -84,7 +84,7 @@
                       <th>Owner</th> 
                       <th>Contact Number</th> 
                       <th>Location</th>   
-                      <th>Photos</th>              
+                      <th>Poster</th>              
                       <th>Archived On</th>
                     </tr>
                 <tbody id="archived-tbody"></tbody>                                                       
