--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -108,7 +108,7 @@
                     <th>Type</th> 
                     <th>Contact Number</th>                    
                     <th>Location</th>                 
-                    <th>Photos</th>
+                    <th>Poster</th>
                     <th>QR Code</th> 
                   </tr>
                   <tbody id="tbody1"></tbody>
