--- a/HTML/souvenir.html
+++ b/HTML/souvenir.html
@@ -108,7 +108,7 @@
                     <th>Owner</th> 
                     <th>Contact Number</th> 
                     <th>Location</th>      
-                    <th>Photos</th>  
+                    <th>Poster</th>  
                     <th>Qr Code</th>  
 
                   </tr>
