--- a/HTML/iArchives.html
+++ b/HTML/iArchives.html
@@ -82,7 +82,7 @@
                        <th>Archived By</th> 
                        <th>Name</th>
                        <th>Description</th>
-                       <th>Photos</th>
+                       <th>Poster</th>
                       <th>Archived Date</th>
     
                     </tr>
