--- a/HTML/industries.html
+++ b/HTML/industries.html
@@ -97,7 +97,7 @@
                 <tr>
                   <th>Name</th>
                   <th>Description</th>
-                  <th>Photos</th>
+                  <th>Poster</th>
 
                 </tr>
                 <tbody id="tbody1"></tbody>
