--- a/HTML/sArchives.html
+++ b/HTML/sArchives.html
@@ -83,7 +83,7 @@
                         <th>Owner</th> 
                         <th>Contact Number</th> 
                         <th>Location</th>   
-                        <th>Photos</th>              
+                        <th>Poster</th>              
                         <th>Archived On</th>
     
                     </tr>
