--- a/HTML/tArchives.html
+++ b/HTML/tArchives.html
@@ -82,7 +82,7 @@
                        <th> Name</th>
                      
                        <th> Description</th>
-                       <th> Photos</th>
+                       <th> Poster</th>
                       <th>Archived Date</th>
     
                     </tr>
