--- a/HTML/tourist.html
+++ b/HTML/tourist.html
@@ -116,7 +116,7 @@
                     <th>Name</th>                  
                     <th>Description</th>
                     <th>Location</th>  
-                    <th>Photos</th> 
+                    <th>Poster</th> 
                     <th>QR Code</th>   
 
 
