--- a/HTML/events.html
+++ b/HTML/events.html
@@ -20,8 +20,8 @@
     }
 
     .sidenav {
-      background-color: white;
-      height: 100%;
+      background-color: whitesmoke;
+      height: 160%;
     }
 
     @media screen and (max-width: 100px) {
@@ -37,7 +37,7 @@
   <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
-        <h2 id="dash-logo"><img src="/image/ePasyar.png" alt="index" width="60" height="50" class="center-image">
+        <h2 id="dash-logo"><img src="/image/456694310_1626575664570417_5117239041912524083_n.png" alt="index" width="60" height="50" class="center-image">
           ePasyar</h2>
         <ul class="nav nav-pills nav-stacked">
 
@@ -45,7 +45,7 @@
           <li><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
           <li class="active"><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
           <li><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
-          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
+          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
           <li class="sidebar-list-item1">
@@ -86,11 +86,11 @@
       <main class="main-container">
         <div class="main2">
           <div class="btn_useracc">
-            <button class="add_acc" id="add_acc"><i class="fas fa-plus"></i> </button>
-            <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> </button>
-            <button id="delete_acc"><i class="fas fa-archive"></i> </button>
+            <button class="add_acc" id="add_acc"><i class="fas fa-plus"></i> ADD</button>
+            <button class="edit_acc" id="edit_acc"><i class="fas fa-edit"></i> EDIT </button>
+            <button id="delete_acc"><i class="fas fa-archive"></i> ARCHIVE </button>
             <div>
-              <button id="archived_acc"><i class="fas fa-box-open"></i> </button>
+              <button id="archived_acc"><i class="fas fa-box-open"></i> SEE ARCHIVE </button>
             </div>
             
                 
