--- a/HTML/iArchives.html
+++ b/HTML/iArchives.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
-        <h2 id="dash-logo"><img src="/image/ePasyar.png" alt="index" width="60" height="50" class="center-image">
+        <h2 id="dash-logo"><img src="/image/456694310_1626575664570417_5117239041912524083_n.png" alt="index" width="60" height="50" class="center-image">
           ePasyar</h2>
         <ul class="nav nav-pills nav-stacked">
 
@@ -26,7 +26,7 @@
           <li ><a href="#section2" id="profile"><i class="far fa-user"></i> Account Management</a></li>
           <li ><a href="#section12" id="events"><i class="fas fa-calendar-alt"></i> Events</a></li>
           <li><a href="#section13" id="tourist"><i class="fas fa-map-marked"></i> Tourist Spots</a></li>
-          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Hotels</a></li>
+          <li><a href="#section3" id="promotion"><i class="fas fa-hotel"></i> Accomodations</a></li>
           <li><a href="#section13" id="souvenir"><i class="fas fa-shopping-bag"></i> Souvenir Shops</a></li>
           <li><a href="#section4" id="restaurant"><i class="fas fa-utensils"></i> Restaurant</a></li>
           <li class="sidebar-list-item1">
