--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <div class="login-container">
-    <img src="/image/ePasyar.png" alt="index" width="120" height="100" class="center-image">
+    <img src="/image/456694310_1626575664570417_5117239041912524083_n.png" alt="index" width="130" height="100" class="center-image">
     <h1>ePasyar</h1>
     
     <form id="login-form">
