--- a/HTML/registration.html
+++ b/HTML/registration.html
@@ -25,7 +25,7 @@
 </style>
 <body>
     <div class="reg-container">
-      <img src="/image/ePasyar.png" alt="index" width="100" height="80" class="center-image">
+      <!-- <img src="/image/456694310_1626575664570417_5117239041912524083_n.png" alt="index" width="100" height="80" class="center-image"> -->
         <h1>ePasyar</h1>
         <h1>Create an Account</h1>
         <form id="register-form">
